--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 #format 變數名稱=數值
 
 PORT=3000
-
 APP_DEBUG=true
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=nodejs_web
+DB_USERNAME=root
+DB_PASSWORD=
