--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   }
 }
