--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs-locals": "^1.0.2",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-libcurl": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
